--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -13,5 +13,18 @@
     <color name="grey_200">#FF959595</color>
     <color name="grey_100">#FFE6E6E6</color>
 
+    <color name="background_slider">#FFD2D2D2</color>
+    <color name="background_track_color_slider">#FF4CAB4A</color>
+    <color name="background_top_rate">#FFAB803F</color>
+    <color name="background_top_rate_pressed">#FF6FAB3F</color>
+
+    <color name="text_bottom_rate">#FFD7BA8E</color>
+    <color name="beige_200">#FFFFF3D3</color>
+    <color name="goldenrod_400">#FFB98E1E</color>
+
+
+
+
+
 
 </resources>
