--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -21,6 +21,8 @@
     <color name="text_bottom_rate">#FFD7BA8E</color>
     <color name="beige_200">#FFFFF3D3</color>
     <color name="goldenrod_400">#FFB98E1E</color>
+    <color name="light_gray_100">#FFEFEFEF</color>
+
 
 
 
