--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -17,6 +17,7 @@
     <color name="background_track_color_slider">#FF4CAB4A</color>
     <color name="background_top_rate">#FFAB803F</color>
     <color name="background_top_rate_pressed">#FF6FAB3F</color>
+    <color name="background_arrow_back">#FF995630</color>
 
     <color name="text_bottom_rate">#FFD7BA8E</color>
     <color name="beige_200">#FFFFF3D3</color>
